--- a/bower.json
+++ b/bower.json
@@ -2,11 +2,15 @@
   "name": "bonfire",
   "version": "0.0.0",
   "dependencies": {
-    "angular": "~1.0.8",
-    "json3": "~3.2.5","es5-shim": "~2.0.8"
+    "angular": "~1.2.6",
+    "json3": "~3.2.5",
+    "es5-shim": "~2.0.8",
+    "foundation": "zurb/bower-foundation#~5.0.2",
+    "jquery": "~2.0.3",
+    "angular-animate": "~1.2.10"
   },
   "devDependencies": {
-    "angular-mocks": "~1.0.8",
-    "angular-scenario": "~1.0.8"
+    "angular-mocks": "~1.2.6",
+    "angular-scenario": "~1.2.6"
   }
 }
