--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "grunt-contrib-uglify":   "~0.2.0",
     "grunt-contrib-sass":     "~0.6.0",
     "grunt-contrib-jshint":   "~0.6.0",
+    "grunt-contrib-cssmin":   "~0.6.0",
     "grunt-contrib-clean":    "~0.5.0",
     "grunt-contrib-htmlmin":  "~0.1.3",
     "grunt-contrib-imagemin": "~0.2.0",
