--- a/package.json
+++ b/package.json
@@ -3,33 +3,34 @@
   "version": "0.0.0",
   "dependencies": {},
   "devDependencies": {
-    "grunt":                  "~0.4.1",
-    "grunt-contrib-copy":     "~0.4.1",
-    "grunt-contrib-concat":   "~0.3.0",
-    "grunt-contrib-uglify":   "~0.2.0",
-    "grunt-contrib-sass":     "~0.6.0",
-    "grunt-contrib-jshint":   "~0.6.0",
-    "grunt-contrib-cssmin":   "~0.6.0",
-    "grunt-contrib-clean":    "~0.5.0",
-    "grunt-contrib-htmlmin":  "~0.1.3",
+    "grunt": "~0.4.1",
+    "grunt-contrib-copy": "~0.4.1",
+    "grunt-contrib-concat": "~0.3.0",
+    "grunt-contrib-uglify": "~0.2.0",
+    "grunt-contrib-sass": "~0.6.0",
+    "grunt-contrib-jshint": "~0.6.0",
+    "grunt-contrib-cssmin": "~0.6.0",
+    "grunt-contrib-clean": "~0.5.0",
+    "grunt-contrib-htmlmin": "~0.1.3",
     "grunt-contrib-imagemin": "~0.2.0",
-    "grunt-contrib-watch":    "~0.5.2",
-    "grunt-autoprefixer":     "~0.6.5",
-    "grunt-usemin":           "~0.1.11",
-    "grunt-svgmin":           "~0.2.0",
-    "grunt-rev":              "~0.1.0",
-    "grunt-concurrent":       "~0.3.0",
-    "load-grunt-tasks":       "~0.1.0",
-    "grunt-google-cdn":       "~0.2.0",
-    "grunt-ngmin":            "~0.0.2",
-    "time-grunt":             "~0.1.0",
-    "grunt-jade":             "~0.4.0",
-    "grunt-express-server":   "~0.4.5",
-    "express":                "~3.2.4",
-    "jshint-stylish":         "~0.1.3",
-    "termcolor":              "~0.2.0",
-    "green-jwt":              "0.0.8-alpha",
-    "request":                "~2.33.0"
+    "grunt-contrib-watch": "~0.5.2",
+    "grunt-autoprefixer": "~0.6.5",
+    "grunt-usemin": "~0.1.11",
+    "grunt-svgmin": "~0.2.0",
+    "grunt-rev": "~0.1.0",
+    "grunt-concurrent": "~0.3.0",
+    "load-grunt-tasks": "~0.1.0",
+    "grunt-google-cdn": "~0.2.0",
+    "grunt-ngmin": "~0.0.2",
+    "time-grunt": "~0.1.0",
+    "grunt-jade": "~0.4.0",
+    "grunt-express-server": "~0.4.5",
+    "express": "~3.2.4",
+    "jshint-stylish": "~0.1.3",
+    "termcolor": "~0.2.0",
+    "green-jwt": "0.0.8-alpha",
+    "request": "~2.33.0",
+    "grunt-build-control": "~0.1.2"
   },
   "engines": {
     "node": ">=0.8.0"
