--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "green-jwt": "0.0.8-alpha",
     "request": "~2.33.0",
     "grunt-build-control": "~0.1.2",
-    "newrelic": "~1.3.2"
+    "newrelic": "~1.3.2",
+    "grunt-ng-constant": "~0.4.8"
   },
   "engines": {
     "node": ">=0.8.0"
