--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "request": "~2.33.0",
     "grunt-build-control": "~0.1.2",
     "newrelic": "~1.3.2",
-    "grunt-ng-constant": "~0.4.8"
+    "grunt-ng-constant": "~0.4.8",
+    "sendgrid": "1.0.3"
   },
   "engines": {
     "node": ">=0.8.0"
